services/30-metrics/grafana/40-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: grafana
  namespace: grafana
  labels:
    app.kubernetes.io/name: grafana
spec:
  selector:
    app.kubernetes.io/name: grafana
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
