services/30-metrics/grafana/50-ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: grafana
  namespace: grafana
  labels:
    app.kubernetes.io/name: grafana
  annotations:
    kubernetes.io/ingress.class: external
    certmanager.k8s.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: grafana.anton-johansson.com
      http:
        paths:
          - path: /
            backend:
              serviceName: grafana
              servicePort: 3000
  tls:
    - secretName: grafana-cert
      hosts:
        - grafana.anton-johansson.com
