services/30-metrics/grafana/60-ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: grafana
  namespace: grafana
  labels:
    app.kubernetes.io/name: grafana
  annotations:
    kubernetes.io/ingress.class: external
spec:
  rules:
    - host: grafana.anton-johansson.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
  tls:
    - secretName: grafana-updated-certificate
      hosts:
        - grafana.anton-johansson.com
